Make replay benchmarks verify metadata and resource evidence
Signed-off-by: Sagi Bashari <sagi@varve.io>